--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
         tile.className = 'folder-tile';
         tile.onclick = () => openFolder(folder);
 
-        const imageUrl = folder.imageUrl || 'https://i.imgur.com/oYiTqum.png'; // default image
+        const imageUrl = folder.imageUrl || 'https://api.removal.ai/download/g1/preview/7d18dfbd-cd72-4052-983d-f2d2ad6f0f41.png'; // default image
 
         tile.innerHTML = `
           <img src="${imageUrl}" class="folder-icon-img" />
